# codewars

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
src/codewars/: __about__.py
src/codewars/4/: snail_sort.py
src/codewars/camel_case/: break_camel_case.py  camel_case.py  to_camel_case.py
src/codewars/compare_vals/: compare_vals.py
src/codewars/encode_duplicates/: duplicate_encode.py
src/codewars/filter/: filter.py
src/codewars/find_next_perfect_square/: find_next_square.py
src/codewars/find_odd_int/: find_odd_int.py
src/codewars/find_uniq/: find_uniq_num.py  find_uniq_str.py
src/codewars/functions/: bouncing_ball.py  filter.py  find_next_square.py  find_uniq_num.py  gen_hashtags.py  nb_year.py  rm_char.py  rm_chars.py  rm_elems.py  square_digits.py
src/codewars/population_growth/: nb_year.py
src/codewars/remove_char/: remove_char.py
src/codewars/return_char/: return_char.py
src/codewars/reverse_chars/: reverse_chars.py
src/codewars/rm_elems/: rm_elems.py
src/codewars/square_digits/: square_digits.py
tests/: __init__.py
